Fix text overflow form elements

--- a/style/index.css
+++ b/style/index.css
@@ -147,6 +147,8 @@ fieldset {
     align-items: center;
     width: 45%;
     height: calc(var(--default-font-size)*3.5);
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 input {
@@ -170,9 +172,6 @@ input {
     color: darkgrey;
     padding: 0 15px;
     transition: 0.5s ease;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 ;}
 
 input:focus {
